--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -13,13 +13,16 @@
 
   {{ $cv := index $.Site.Data.json_resume $.Site.Language.Lang }}
   {{ if $cv.basics }}
-    <aside class="bio">
-      {{ partial "json-resume/basics.html" . }}
+    {{ $s := slice "/" "/about/" "/cv/" }}
+    {{ if in $s $.Page.RelPermalink }}
+      <aside class="bio">
+        {{ partial "json-resume/basics.html" . }}
 
-      {{ if $.Site.Params.tagCloud.enable }}
-        <hr />
-      {{ end }}
-    </aside>
+        {{ if $.Site.Params.tagCloud.enable }}
+          <hr />
+        {{ end }}
+      </aside>
+    {{ end }}
   {{ end }}
 
   {{ if $.Site.Params.tagCloud.enable }}
