update: logo url

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,13 +1,5 @@
 <header>
-  <a
-    class="logo"
-    href="
-    {{- with $.Site.Params.Logo.URL -}}
-      {{- . -}}
-    {{- else -}}
-      {{- $.Site.BaseURL -}}
-    {{- end -}}"
-  >
+  <a class="logo" href="{{- $.Site.BaseURL -}}">
     {{ with $.Site.Params.Logo.Text }}
       <div class="logo__text">{{ . }}</div>
     {{ end }}
